--- a/openhpi/trunk/docs/man/ohparam.pod.1
+++ b/openhpi/trunk/docs/man/ohparam.pod.1
@@ -15,7 +15,7 @@ ohparam get will display all global configuration parameters of the openhpi daem
 
 ohparam set will change the given global configuration parameters of the openhpi daemon for the specified domain to the new value.
 
-If no domain is selected, ohparam uses the default domain. The selected domain id must be configured via the openhpidclient.conf file specified in the environment.
+If no domain or host is selected, ohparam uses the default domain as specified in the openhpiclient.conf file.
 
 =head1 COMMANDS
 
@@ -46,8 +46,13 @@ Help Options:
 Application Options:
   -D, --domain=nn              Select domain id nn
   -X, --debug                  Display debug messages
-  -N, --host="host<:port>"     Connect to daemon host:port
+  -N, --host="host<:port>"     Open session to the domain served by the daemon 
+                               at the specified URL (host:port)
+                               This option overrides the OPENHPI_DAEMON_HOST and
+                               OPENHPI_DAEMON_PORT environment variables.
   -C, --cfgfile="file"         Use passed file as client configuration file
+                               This option overrides the OPENHPICLIENT_CONf
+                               environment variable.
 
 
 =back
