--- a/openhpi/trunk/docs/man/hpialarms.pod.1
+++ b/openhpi/trunk/docs/man/hpialarms.pod.1
@@ -15,7 +15,7 @@ hpialarms - A openhpi sample application that shows "Alarm Control" management i
 hpialarms walks the RPT (Resource Presence Table) for resources that have 
 "Alarm Control" management instruments (SAHPI_CTRL_LED).
 
-If no domain is selected, hpialarms uses a session with the default domain. The selected domain id must be configured via the openhpidclient.conf file specified in the environment.
+If no domain or host is selected, hpialarms uses the default domain as specified in the openhpiclient.conf file.
 
 =head1 OPTIONS
 
@@ -37,8 +37,13 @@ Application Options:
   -o, --all                    Set all alarms off
   -D, --domain=nn              Select domain id nn
   -X, --debug                  Display debug messages
-  -N, --host="host<:port>"     Connect to daemon host:port
+  -N, --host="host<:port>"     Open session to the domain served by the daemon 
+                               at the specified URL (host:port)
+                               This option overrides the OPENHPI_DAEMON_HOST and
+                               OPENHPI_DAEMON_PORT environment variables.
   -C, --cfgfile="file"         Use passed file as client configuration file
+                               This option overrides the OPENHPICLIENT_CONf
+                               environment variable.
 
 =back
 
