--- a/openhpi/trunk/docs/man/hpidomain.pod.1
+++ b/openhpi/trunk/docs/man/hpidomain.pod.1
@@ -12,10 +12,11 @@ It can also set the domain tag.
 =head1 DESCRIPTION
 
 hpidomain displays the domain info for the specified domain.
-If no domain is selected, hpidomain works with the default domain.
+If no domain or host is selected, ohparam uses the default domain as specified in the openhpiclient.conf file.
 
 In verbose mode, it walks the DRT and displays domaininfo for all directly related domains.
 Option -t allows to change the domain tag.
+
 
 =over 2
 
@@ -29,8 +30,13 @@ Application Options:
   -D, --domain=nn              Select domain id nn
   -X, --debug                  Display debug messages
   -V, --verbose                Verbose mode
-  -N, --host="host<:port>"     Connect to daemon host:port
+  -N, --host="host<:port>"     Open session to the domain served by the daemon 
+                               at the specified URL (host:port)
+                               This option overrides the OPENHPI_DAEMON_HOST and
+                               OPENHPI_DAEMON_PORT environment variables.
   -C, --cfgfile="file"         Use passed file as client configuration file
+                               This option overrides the OPENHPICLIENT_CONf
+                               environment variable.
 
 
 =back
