--- a/openhpi/trunk/docs/man/hpievents.pod.1
+++ b/openhpi/trunk/docs/man/hpievents.pod.1
@@ -12,7 +12,7 @@ hpievents - An openhpi sample application that polls for events.
 
 hpievents polls for events in an opened HPI session.  User can specify wait time for the event. User can also select the order between hpi resource (resource event) discovery and hpi event subscription.
 
-If no domain is selected, hpievents polls for events in the default domain. The selected domain id must be configured via the openhpidclient.conf file specified in the environment.
+If no domain or host is selected, hpievents polls for events in the default domain as specified in the openhpiclient.conf file.
 
 
 =head1 OPTIONS
@@ -20,15 +20,21 @@ If no domain is selected, hpievents polls for events in the default domain. The 
 =over 2
  
 Help Options:
-  -h, --help                                    Show help options
+  -h, --help                   Show help options
 
 Application Options:
-  -t, --timeout=n|BLOCK|SAHPI_TIMEOUT_BLOCK     Wait n seconds for event or infinite wait
-  -d, --discover                                Call saHpiDiscover() after saHpiSubscribe()
-  -D, --domain=nn                               Select domain id nn
-  -X, --debug                                   Display debug messages
-  -N, --host="host<:port>"                      Connect to daemon host:port
-  -C, --cfgfile="file"                          Use passed file as client configuration file
+  -t, --timeout=n|BLOCK        Wait n seconds for event or infinite wait
+                               (BLOCK or SAHPI_TIMEOUT_BLOCK)
+  -d, --discover               Call saHpiDiscover() after saHpiSubscribe()
+  -D, --domain=nn              Select domain id nn
+  -X, --debug                  Display debug messages
+  -N, --host="host<:port>"     Open session to the domain served by the daemon
+                               at the specified URL (host:port)
+                               This option overrides the OPENHPI_DAEMON_HOST and
+                               OPENHPI_DAEMON_PORT environment variables.
+  -C, --cfgfile="file"         Use passed file as client configuration file
+                               This option overrides the OPENHPICLIENT_CONf
+                               environment variable.
 
 =back
 
