--- a/openhpi/trunk/docs/man/hpipower.pod.1
+++ b/openhpi/trunk/docs/man/hpipower.pod.1
@@ -12,7 +12,7 @@ hpipower - This sample openhpi application exercises HPI Power Management APIs.
 
 hpipower searches the Resource Presence Table (RPT) for resources with Power Capability. It sends the requested power action to the selected target.
 
-If no domain is selected, hpievents polls for events in the default domain. The selected domain id must be configured via the openhpidclient.conf file specified in the environment.
+If no domain or host is selected, hpipower uses the default domain as specified in the openhpiclient.conf file.
 
 
 =head1 OPTIONS
@@ -30,8 +30,13 @@ Application Options:
   -b, --blade=n                Specify blade n (1...n)
   -D, --domain=nn              Select domain id nn
   -X, --debug                  Display debug messages
-  -N, --host="host<:port>"     Connect to daemon host:port
+  -N, --host="host<:port>"     Open session to the domain served by the daemon 
+                               at the specified URL (host:port)
+                               This option overrides the OPENHPI_DAEMON_HOST and
+                               OPENHPI_DAEMON_PORT environment variables.
   -C, --cfgfile="file"         Use passed file as client configuration file
+                               This option overrides the OPENHPICLIENT_CONf
+                               environment variable.
 
 =back
 
