--- a/openhpi/trunk/docs/man/hpithres.pod.1
+++ b/openhpi/trunk/docs/man/hpithres.pod.1
@@ -11,7 +11,7 @@ hpithres -  This sample openhpi application interactively displays sensors and s
 
 hpithres interactively displays sensor info for resources with Sensor Capability. Resources, sensors,and sensor info can be individually selected.
 
-If no domain is selected, hpiel uses a session with the default domain. The selected domain id must be configured via the openhpidclient.conf file specified in the environment.
+If no domain or host is selected, hpithres uses the default domain as specified in the openhpiclient.conf file.
 
 =head1 OPTIONS
 
@@ -23,8 +23,13 @@ Help Options:
 Application Options:
   -D, --domain=nn              Select domain id nn
   -X, --debug                  Display debug messages
-  -N, --host="host<:port>"     Connect to daemon host:port
+  -N, --host="host<:port>"     Open session to the domain served by the daemon 
+                               at the specified URL (host:port)
+                               This option overrides the OPENHPI_DAEMON_HOST and
+                               OPENHPI_DAEMON_PORT environment variables.
   -C, --cfgfile="file"         Use passed file as client configuration file
+                               This option overrides the OPENHPICLIENT_CONf
+                               environment variable.
 
 
 =back
