--- a/openhpi/trunk/docs/man/hpitree.pod.1
+++ b/openhpi/trunk/docs/man/hpitree.pod.1
@@ -13,7 +13,7 @@ and resources' manamegement instruments (rdr's) data structures of the managed o
 
 hpitree walks the Resource Presence Table (RPT) of the managed openHPI complex, and displays in details the resources (rpt's) and resources' management instruments (rdr's) data structures.
 
-If no domain is selected, hpitop displays information using a session with the default domain. The selected domain id must be configured via the openhpidclient.conf file specified in the environment.
+If no domain or host is selected, hpitree uses the default domain as specified in the openhpiclient.conf file.
 
 
 =head1 OPTIONS
@@ -38,8 +38,13 @@ Application Options:
                                (Used with [-cdirs] options)
   -D, --domain=nn              Select domain id nn
   -X, --debug                  Display debug messages
-  -N, --host="host<:port>"     Connect to daemon host:port
+  -N, --host="host<:port>"     Open session to the domain served by the daemon 
+                               at the specified URL (host:port)
+                               This option overrides the OPENHPI_DAEMON_HOST and
+                               OPENHPI_DAEMON_PORT environment variables.
   -C, --cfgfile="file"         Use passed file as client configuration file
+                               This option overrides the OPENHPICLIENT_CONf
+                               environment variable.
 
 
 =back
