--- a/openhpi/trunk/docs/man/hpixml.pod.1
+++ b/openhpi/trunk/docs/man/hpixml.pod.1
@@ -11,7 +11,7 @@ hpxml - An openhpi sample application that displays system view in XML.
 
 hpixml displays system view in XML.
 
-If no domain is selected, hpixml uses a session with the default domain. The selected domain id must be configured via the openhpidclient.conf file specified in the environment.
+If no domain or host is selected, hpixml uses the default domain as specified in the openhpiclient.conf file.
 
 
 =head1 OPTIONS
@@ -26,8 +26,13 @@ Application Options:
   -t, --text                   Use enum and flag text names instead of raw values
   -s, --xsd                    Show XML schema
   -D, --domain=nn              Select domain id nn
-  -N, --host="host<:port>"     Connect to daemon host:port
+  -N, --host="host<:port>"     Open session to the domain served by the daemon 
+                               at the specified URL (host:port)
+                               This option overrides the OPENHPI_DAEMON_HOST and
+                               OPENHPI_DAEMON_PORT environment variables.
   -C, --cfgfile="file"         Use passed file as client configuration file
+                               This option overrides the OPENHPICLIENT_CONf
+                               environment variable.
 
 =back
 
