--- a/openhpi/trunk/docs/man/ohdomainlist.pod.1
+++ b/openhpi/trunk/docs/man/ohdomainlist.pod.1
@@ -20,6 +20,8 @@ variable.
 Dynamic changes of the domain list done using the oHpiDomainAdd and oHpiDomainAddById
 API are valid only for the life-time of the client library.
 
+If no domain or host is selected, ohdomainlist lists the domains as specified in the openhpiclient.conf file.
+
 =head1 OPTIONS
 
 =over 2
@@ -27,11 +29,16 @@ API are valid only for the life-time of the client library.
  (No Option) Display domain info
 
 Help Options:
-  -h, --help        Show help options
+  -h, --help                   Show help options
 
 Application Options:
-  -X, --debug       Display debug messages
-  -V, --verbose     Verbose mode
+  -D, --domain=nn              Select domain id nn
+  -X, --debug                  Display debug messages
+  -V, --verbose                Verbose mode
+  -N, --host="host<:port>"     Define also a domain at the specified host:port
+  -C, --cfgfile="file"         Use passed file as client configuration file
+                               This option overrides the OPENHPICLIENT_CONf
+                               environment variable.
 
 =back
 
