--- a/openhpi/trunk/docs/man/ohhandler.pod.1
+++ b/openhpi/trunk/docs/man/ohhandler.pod.1
@@ -36,7 +36,7 @@ ohhandler create allows to dynamically create a new handler with configuration p
  Example:
  ohhandler create plugin libsimulator entity_root "{SYSTEM_CHASSIS,1}" name sim
 
-If no domain is selected, ohhandler uses the default domain. The selected domain id must be configured via the openhpidclient.conf file specified in the environment.
+If no domain or host is selected, ohhandler uses the default domain as specified in the openhpiclient.conf file.
 
 =head1 OPTIONS
 
@@ -48,8 +48,13 @@ Help Options:
 Application Options:
   -D, --domain=nn              Select domain id nn
   -X, --debug                  Display debug messages
-  -N, --host="host<:port>"     Connect to daemon host:port
+  -N, --host="host<:port>"     Open session to the domain served by the daemon 
+                               at the specified URL (host:port)
+                               This option overrides the OPENHPI_DAEMON_HOST and
+                               OPENHPI_DAEMON_PORT environment variables.
   -C, --cfgfile="file"         Use passed file as client configuration file
+                               This option overrides the OPENHPICLIENT_CONf
+                               environment variable.
 
 
 =back
