--- a/openhpi/trunk/docs/man/hpialarms.1.pod
+++ b/openhpi/trunk/docs/man/hpialarms.1.pod
@@ -19,31 +19,73 @@ If no domain or host is selected, hpialarms uses the default domain as specified
 
 =head1 OPTIONS
 
-=over 2
-
 (No Option) Display alarm states
 
-Help Options:
-  -h, --help                   Show help options
+=head2 Help Options:
 
-Application Options:
-  -c, --critical=1|0           Set critical alarm on|off
-  -m, --major=1|0              Set major alarm on|off
-  -n, --minor=1|0              Set minor alarm on|off
-  -a, --diska=1|0              Set diska alarm on|off
-  -b, --diskb=1|0              Set diskb alarm on|off
-  -p, --power=1|0              Set power alarm on|off
-  -i, --chassisid=n            Set chassis id on for n seconds
-  -o, --all                    Set all alarms off
-  -D, --domain=nn              Select domain id nn
-  -X, --debug                  Display debug messages
-  -N, --host="host<:port>"     Open session to the domain served by the daemon 
-                               at the specified URL (host:port)
-                               This option overrides the OPENHPI_DAEMON_HOST and
-                               OPENHPI_DAEMON_PORT environment variables.
-  -C, --cfgfile="file"         Use passed file as client configuration file
-                               This option overrides the OPENHPICLIENT_CONf
-                               environment variable.
+=over 2
+
+=item B<-h>, B<--help>
+
+Show help options
+
+=back
+
+=head2 Application Options:
+
+=over 2
+
+=item B<-c> I<1|0>, -B<-critical>=I<1|0>
+
+Set critical alarm on|off
+
+=item B<-m> I<1|0>, -B<-major>=I<1|0>
+
+Set major alarm on|off
+
+=item B<-n> I<1|0>, -B<-minor>=I<1|0>
+
+Set minor alarm on|off
+
+=item B<-a> I<1|0>, -B<-diska>=I<1|0>
+
+Set diska alarm on|off
+
+=item B<-b> I<1|0>, -B<-diskb>=I<1|0>
+
+Set diskb alarm on|off
+
+=item B<-p> I<1|0>, -B<-power>=I<1|0>
+
+Set power alarm on|off
+
+=item B<-i> I<n>, -B<-chassisid>=I<n>
+
+Set chassis id on for I<n> seconds
+
+=item B<-o>, -B<-all>
+
+Set all alarms off
+
+=item B<-D> I<nn>, B<--domain>=I<nn>
+
+Select domain id I<nn>
+
+=item B<-X>, B<--debug>
+
+Display debug messages
+
+=item B<-N> I<"host[:port]">, B<--host>=I<"host[:port]">
+
+Open session to the domain served by the daemon at the specified URL (host:port).
+This option overrides the OPENHPI_DAEMON_HOST and OPENHPI_DAEMON_PORT environment variables.
+If host contains ':' (for example IPv6 address) then enclose it in square brackets.
+For example: I<"[::1]"> or I<"[::1]:4743">.
+
+=item B<-C> I<"file">, B<--cfgfile>=I<"file">
+
+Use passed file as client configuration file.
+This option overrides the OPENHPICLIENT_CONf environment variable.
 
 =back
 
@@ -79,4 +121,5 @@ Authors of this man page:
 
  Peter D Phan (pdphan@users.sourceforge.net)
  Ulrich Kleber (ulikleber@users.sourceforge.net)
+ Anton Pak (avpak@users.sourceforge.net)
 
