--- a/openhpi/trunk/docs/man/hpiel.1.pod
+++ b/openhpi/trunk/docs/man/hpiel.1.pod
@@ -14,35 +14,66 @@ hpiel searches the RPT (Resource Present Table) for resources with SAHPI_CAPABIL
 
 If no domain is selected, hpiel uses a session with the default domain. The selected domain id must be configured via the openhpidclient.conf file specified in the environment.
 
-
 =head1 OPTIONS
+
+=head2 Help Options:
 
 =over 2
 
-Help Options:
-  -h, --help                   Show help options
+=item B<-h>, B<--help>
 
-Application Options:
-  -d, --del                    Display domain event log entries
-  -c, --clear                  Clear log before reading event log entries
-  -p, --resource               Pull resource info along with log entry
-  -r, --rdr                    Pull RDR info along with log entry
-  -D, --domain=nn              Select domain id nn
-  -X, --debug                  Display debug messages
-  -E, --entity-path="epath"    Use entity path epath and display resource
-                               event log entries.
-  -N, --host="host<:port>"     Open session to the domain served by the daemon 
-                               at the specified URL (host:port)
-                               This option overrides the OPENHPI_DAEMON_HOST and
-                               OPENHPI_DAEMON_PORT environment variables.
-  -C, --cfgfile="file"         Use passed file as client configuration file
-                               This option overrides the OPENHPICLIENT_CONf
-                               environment variable.
-
-If neither -d or -E "<arg>" are specified, event log entries will be shown
-for all supporting resources by default.
+Show help options
 
 =back
+
+=head2 Application Options:
+
+=over 2
+
+=item B<-d>, B<--del>
+
+Display domain event log entries
+
+=item B<-c>, B<--clear>
+
+Clear log before reading event log entries
+
+=item B<-p>, B<--resource>
+
+Pull resource info along with log entry
+
+=item B<-r>, B<--rdr>
+
+Pull RDR info along with log entry
+
+=item B<-E> I<"epath">, B<--entity-path>=I<"epath">
+
+Use entity path epath and display resource
+
+=item B<-D> I<nn>, B<--domain>=I<nn>
+
+Select domain id I<nn>
+
+=item B<-X>, B<--debug>
+
+Display debug messages
+
+=item B<-N> I<"host[:port]">, B<--host>=I<"host[:port]">
+
+Open session to the domain served by the daemon at the specified URL (host:port).
+This option overrides the OPENHPI_DAEMON_HOST and OPENHPI_DAEMON_PORT environment variables.
+If host contains ':' (for example IPv6 address) then enclose it in square brackets.
+For example: I<"[::1]"> or I<"[::1]:4743">.
+
+=item B<-C> I<"file">, B<--cfgfile>=I<"file">
+
+Use passed file as client configuration file.
+This option overrides the OPENHPICLIENT_CONf environment variable.
+
+=back
+
+If neither B<-d> or B<-E> I<"epath"> are specified, event log entries will be shown
+for all supporting resources by default.
 
 =head1 HPI APIs uniquely used in this application 
 
@@ -88,4 +119,5 @@ Authors of this man page:
 
  Peter D Phan (pdphan@users.sourceforge.net)
  Ulrich Kleber (ulikleber@users.sourceforge.net)
+ Anton Pak (avpak@users.sourceforge.net)
 
