--- a/openhpi/trunk/docs/man/hpievents.1.pod
+++ b/openhpi/trunk/docs/man/hpievents.1.pod
@@ -14,27 +14,49 @@ hpievents polls for events in an opened HPI session.  User can specify wait time
 
 If no domain or host is selected, hpievents polls for events in the default domain as specified in the openhpiclient.conf file.
 
-
 =head1 OPTIONS
 
-=over 2
- 
-Help Options:
-  -h, --help                   Show help options
+=head2 Help Options:
 
-Application Options:
-  -t, --timeout=n|BLOCK        Wait n seconds for event or infinite wait
-                               (BLOCK or SAHPI_TIMEOUT_BLOCK)
-  -d, --discover               Call saHpiDiscover() after saHpiSubscribe()
-  -D, --domain=nn              Select domain id nn
-  -X, --debug                  Display debug messages
-  -N, --host="host<:port>"     Open session to the domain served by the daemon
-                               at the specified URL (host:port)
-                               This option overrides the OPENHPI_DAEMON_HOST and
-                               OPENHPI_DAEMON_PORT environment variables.
-  -C, --cfgfile="file"         Use passed file as client configuration file
-                               This option overrides the OPENHPICLIENT_CONf
-                               environment variable.
+=over 2
+
+=item B<-h>, B<--help>
+
+Show help options
+
+=back
+
+=head2 Application Options:
+
+=over 2
+
+=item B<-t> I<n|BLOCK>, B<--timeout>=I<n|BLOCK>
+
+Wait I<n> seconds for event or infinite wait (I<BLOCK>)
+
+=item B<-d>, B<--discover>
+
+Call saHpiDiscover() after saHpiSubscribe()
+
+=item B<-D> I<nn>, B<--domain>=I<nn>
+
+Select domain id I<nn>
+
+=item B<-X>, B<--debug>
+
+Display debug messages
+
+=item B<-N> I<"host[:port]">, B<--host>=I<"host[:port]">
+
+Open session to the domain served by the daemon at the specified URL (host:port).
+This option overrides the OPENHPI_DAEMON_HOST and OPENHPI_DAEMON_PORT environment variables.
+If host contains ':' (for example IPv6 address) then enclose it in square brackets.
+For example: I<"[::1]"> or I<"[::1]:4743">.
+
+=item B<-C> I<"file">, B<--cfgfile>=I<"file">
+
+Use passed file as client configuration file.
+This option overrides the OPENHPICLIENT_CONf environment variable.
 
 =back
 
@@ -77,3 +99,4 @@ Authors of this man page:
 
  Peter D Phan (pdphan@users.sourceforge.net)
  Ulrich Kleber (ulikleber@users.sourceforge.net)
+ Anton Pak (avpak@users.sourceforge.net)
