--- a/openhpi/trunk/docs/man/hpigensimdata.1.pod
+++ b/openhpi/trunk/docs/man/hpigensimdata.1.pod
@@ -24,23 +24,49 @@ If no domain or host is selected, ohparam uses the default domain as specified i
 
 If no file name is specified, the data is displayed on console.
 
+=head1 OPTIONS
+
+=head2 Help Options:
+
 =over 2
 
-Help Options:
-  -h, --help                   Show help options
+=item B<-h>, B<--help>
 
-Application Options:
-  -r, --resource=res_id        Select particular resource id for an update file
-  -f, --file=filename          Name of the file to be generated
-  -m, --mode=UPD|INIT          Write update or initial file
-  -D, --domain=nn              Select domain id nn
-  -N, --host="host<:port>"     Open session to the domain served by the daemon 
-                               at the specified URL (host:port)
-                               This option overrides the OPENHPI_DAEMON_HOST and
-                               OPENHPI_DAEMON_PORT environment variables.
-  -C, --cfgfile="file"         Use passed file as client configuration file
-                               This option overrides the OPENHPICLIENT_CONf
-                               environment variable.
+Show help options
+
+=back
+
+=head2 Application Options:
+
+=over 2
+
+=item B<-r> I<res_id>, B<--resource>=I<res_id>
+
+Select particular resource id for an update file
+
+=item B<-f> I<filename>, B<--file>=I<filename>
+
+Name of the file to be generated
+
+=item B<-m> I<UPD|INIT>, B<--mode>=I<UPD|INIT>
+
+Write update or initial file
+
+=item B<-D> I<nn>, B<--domain>=I<nn>
+
+Select domain id I<nn>
+
+=item B<-N> I<"host[:port]">, B<--host>=I<"host[:port]">
+
+Open session to the domain served by the daemon at the specified URL (host:port).
+This option overrides the OPENHPI_DAEMON_HOST and OPENHPI_DAEMON_PORT environment variables.
+If host contains ':' (for example IPv6 address) then enclose it in square brackets.
+For example: I<"[::1]"> or I<"[::1]:4743">.
+
+=item B<-C> I<"file">, B<--cfgfile>=I<"file">
+
+Use passed file as client configuration file.
+This option overrides the OPENHPICLIENT_CONf environment variable.
 
 =back
 
@@ -60,4 +86,5 @@ Authors of this man page:
 
  Ulrich Kleber (ulikleber@users.sourceforge.net)
  Lars Wetzel (larswetzel@users.sourceforge.net)
+ Anton Pak (avpak@users.sourceforge.net)
 
