--- a/openhpi/trunk/docs/man/hpireset.1.pod
+++ b/openhpi/trunk/docs/man/hpireset.1.pod
@@ -16,26 +16,50 @@ If no domain is selected, hpireset uses a session with the default domain. The s
 
 =head1 OPTIONS
 
+=head2 Help Options:
+
 =over 2
 
-Help Options:
-  -h, --help                   Show help options
+=item B<-h>, B<--help>
 
-Application Options:
-  -r, --hard                   hard resets the system
-  -w, --warm                   warm resets the system
-  -D, --domain=nn              Select domain id nn
-  -X, --debug                  Display debug messages
-  -N, --host="host<:port>"     Open session to the domain served by the daemon 
-                               at the specified URL (host:port)
-                               This option overrides the OPENHPI_DAEMON_HOST and
-                               OPENHPI_DAEMON_PORT environment variables.
-  -C, --cfgfile="file"         Use passed file as client configuration file
-                               This option overrides the OPENHPICLIENT_CONf
-                               environment variable.
-
+Show help options
 
 =back
+
+=head2 Application Options:
+
+=over 2
+
+=item B<-r>, B<--hard>
+
+Hard resets the system
+
+=item B<-w>, B<--warm>
+
+Warm resets the system
+
+=item B<-D> I<nn>, B<--domain>=I<nn>
+
+Select domain id I<nn>
+
+=item B<-X>, B<--debug>
+
+Display debug messages
+
+=item B<-N> I<"host[:port]">, B<--host>=I<"host[:port]">
+
+Open session to the domain served by the daemon at the specified URL (host:port).
+This option overrides the OPENHPI_DAEMON_HOST and OPENHPI_DAEMON_PORT environment variables.
+If host contains ':' (for example IPv6 address) then enclose it in square brackets.
+For example: I<"[::1]"> or I<"[::1]:4743">.
+
+=item B<-C> I<"file">, B<--cfgfile>=I<"file">
+
+Use passed file as client configuration file.
+This option overrides the OPENHPICLIENT_CONf environment variable.
+
+=back
+
 
 =head1 SEE ALSO
 
@@ -53,4 +77,5 @@ Authors of this man page:
 
  Peter D Phan (pdphan@users.sourceforge.net)
  Ulrich Kleber (ulikleber@users.sourceforge.net)
+ Anton Pak (avpak@users.sourceforge.net)
 
