--- a/openhpi/trunk/docs/man/hpisensor.1.pod
+++ b/openhpi/trunk/docs/man/hpisensor.1.pod
@@ -15,29 +15,57 @@ Option -E (entity-path) restricts the output on the specified entity-path.
 
 If no domain or host is selected, hpisensor uses the default domain as specified in the openhpiclient.conf file.
 
-
 =head1 OPTIONS
+
+=head2 Help Options:
 
 =over 2
 
-Help Options:
-  -h, --help                   Show help options
+=item B<-h>, B<--help>
 
-Application Options:
-  -t, --threshold              Show Thresholds also
-  -r, --range                  Show Range values also
-  -s, --eventstate             Show EventState also
-  -D, --domain=nn              Select domain id nn
-  -X, --debug                  Display debug messages
-  -E, --entity-path="epath"    Use entity path epath
-  -N, --host="host<:port>"     Open session to the domain served by the daemon 
-                               at the specified URL (host:port)
-                               This option overrides the OPENHPI_DAEMON_HOST and
-                               OPENHPI_DAEMON_PORT environment variables.
-  -C, --cfgfile="file"         Use passed file as client configuration file
-                               This option overrides the OPENHPICLIENT_CONf
-                               environment variable.
+Show help options
 
+=back
+
+=head2 Application Options:
+
+=over 2
+
+=item B<-t>, B<--threshold>
+
+Show Thresholds also
+
+=item B<-r>, B<--range>
+
+Show Range values also
+
+=item B<-s>, B<--eventstate>
+
+Show EventState also
+
+=item B<-E> I<"epath">, B<--entity-path>=I<"epath">
+
+Use entity path I<epath>
+
+=item B<-D> I<nn>, B<--domain>=I<nn>
+
+Select domain id I<nn>
+
+=item B<-X>, B<--debug>
+
+Display debug messages
+
+=item B<-N> I<"host[:port]">, B<--host>=I<"host[:port]">
+
+Open session to the domain served by the daemon at the specified URL (host:port).
+This option overrides the OPENHPI_DAEMON_HOST and OPENHPI_DAEMON_PORT environment variables.
+If host contains ':' (for example IPv6 address) then enclose it in square brackets.
+For example: I<"[::1]"> or I<"[::1]:4743">.
+
+=item B<-C> I<"file">, B<--cfgfile>=I<"file">
+
+Use passed file as client configuration file.
+This option overrides the OPENHPICLIENT_CONf environment variable.
 
 =back
 
@@ -57,4 +85,5 @@ Authors of this man page:
 
  Peter D Phan (pdphan@users.sourceforge.net)
  Ulrich Kleber (ulikleber@users.sourceforge.net)
+ Anton Pak (avpak@users.sourceforge.net)
 
