--- a/openhpi/trunk/docs/man/hpixml.1.pod
+++ b/openhpi/trunk/docs/man/hpixml.1.pod
@@ -16,25 +16,50 @@ If no domain or host is selected, hpixml uses the default domain as specified in
 
 =head1 OPTIONS
 
+=head2 Help Options:
+
 =over 2
 
-Help Options:
-  -h, --help                   Show help options
+=item B<-h>, B<--help>
 
-Application Options:
-  -i, --indent                 Use indentation
-  -t, --text                   Use enum and flag text names instead of raw values
-  -s, --xsd                    Show XML schema
-  -D, --domain=nn              Select domain id nn
-  -N, --host="host<:port>"     Open session to the domain served by the daemon 
-                               at the specified URL (host:port)
-                               This option overrides the OPENHPI_DAEMON_HOST and
-                               OPENHPI_DAEMON_PORT environment variables.
-  -C, --cfgfile="file"         Use passed file as client configuration file
-                               This option overrides the OPENHPICLIENT_CONf
-                               environment variable.
+Show help options
 
 =back
+
+=head2 Application Options:
+
+=over 2
+
+=item B<-i>, B<--indent>
+
+Use indentation
+
+=item B<-t>, B<--text>
+
+Use enum and flag text names instead of raw values
+
+=item B<-s>, B<--xsd>
+
+Show XML schema
+
+=item B<-D> I<nn>, B<--domain>=I<nn>
+
+Select domain id I<nn>
+
+=item B<-N> I<"host[:port]">, B<--host>=I<"host[:port]">
+
+Open session to the domain served by the daemon at the specified URL (host:port).
+This option overrides the OPENHPI_DAEMON_HOST and OPENHPI_DAEMON_PORT environment variables.
+If host contains ':' (for example IPv6 address) then enclose it in square brackets.
+For example: I<"[::1]"> or I<"[::1]:4743">.
+
+=item B<-C> I<"file">, B<--cfgfile>=I<"file">
+
+Use passed file as client configuration file.
+This option overrides the OPENHPICLIENT_CONf environment variable.
+
+=back
+
 
 =head1 SEE ALSO
 
