Fix for bug #1800

--- a/openhpi/trunk/baselibs/csharp/README
+++ b/openhpi/trunk/baselibs/csharp/README
@@ -13,7 +13,7 @@ With Mono:
 With Visual C#:
 - Create assembly project
 - Include all .cs files from openhpi_baselib dir to the project
-- Set output assembly name to "openhpi_baselib.dll"
+- Set output assembly name to "openhpi_baselib"
 - Build the project
 
 ================================================================================
